@@ -1,0 +1,2 @@
+---
+rsync::server::package: rsync-daemon
